# Incremental

./: .anjuta_sym_db.db  AUTHORS  Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  example.vala
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Incremental.c  Incremental.sublime-workspace  Incremental.vala  Incremental.vala~  Makefile  Makefile.am  Makefile.in  incremental  incremental.vala  oldcode.vala
src/.deps/: Incremental.Po
